--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "thelia/thelia-modules-View",
+  "name": "thelia/view-module",
   "license": "LGPL-3.0+",
   "type": "thelia-module",
   "require": {
